# sort-track-cpp

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: Hungarian.h  KalmanTracker.h  datatrans.h  track.h  track.hpp  utils.h
src/: Hungarian.cpp  KalmanTracker.cpp  main.cpp  track.cpp  utils.cpp
